fix: 修复 OpenAI 客户端初始化问题，更新依赖配置，添加启动脚本

--- a/requirements_mac.txt
+++ b/requirements_mac.txt
@@ -1,21 +1,33 @@
-applescript==2021.2.9  # macOS音量控制
+annotated-types==0.7.0
 certifi==2025.1.31
 cffi==1.17.1
 comtypes==1.4.6
 cryptography==44.0.1
-numpy
-openai
+numpy==1.26.4
+openai==1.12.0
+opencv-python==4.9.0.80
 opuslib==3.0.1
 paho-mqtt==2.1.0
+psutil==7.0.0
 PyAudio==0.2.14
 pycaw==20240210
 pynput
 pyperclip==1.9.0
 pypinyin==0.53.0
-requests==2.32.3
+PyQt5==5.15.10
+PyQt5-Qt5==5.15.17
+PyQt5-sip==12.13.0
+PyQtWebEngine==5.15.6
+PyQtWebEngine-Qt5==5.15.17
+PyYAML==6.0.1
+requests==2.31.0
+sounddevice==0.4.6
+soundfile>=0.12.1
+SpeechRecognition==3.10.1
+typing_extensions==4.10.0
 vosk==0.3.44
 webrtcvad-wheels==2.0.14
-websockets==11.0.3
+websockets==12.0
 colorlog==6.9.0
 pygame==2.6.1
 scipy
